examples/typechecking/effects.an
effect Log with
    log: fn String -> Unit

effect Use a with
    get: fn Unit -> a
    set: fn a -> Unit

// Expect handler typed with Use String, not Log
handle_basic () {Log} {Use String} =
    handler h for log v -> set v in
    log "test1" {h}

use_resume () =
    handler h for
      | get () -> resume 3i32
      | set _ -> resume ()
    in ()

does_use x {Use _} =
    y = get ()
    set (y + x)

// Ensure a function with unhandled effects errors
pure_fn () =
    log "foo"

// main should always handle all non-primitive effects
main () =
    log "foo"

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// type Log =
//     log: fn String [Ptr Unit] -> Unit
// 
// type Use a =
//     get: fn Unit [Ptr Unit] -> a
//     set: fn a [Ptr Unit] -> Unit
// 
// (handle_basic: fn Unit {Log} {Use String} -> Unit) () {(_: Log)} {(_: Use String)} =
//     (log: fn String {Log} [Ptr Unit] -> Unit) "test1" {(h: (error))}
// 
// (use_resume: fn Unit -> Unit) () =
//     handler (h: Use I32) for
//     | (get: fn Unit {Use I32} [Ptr Unit] -> I32) () -> fn () (resume: fn I32 [Ptr] -> Unit) -> (resume: fn I32 [Ptr] -> Unit) 3_I32
//     | (set: fn I32 {Use I32} [Ptr Unit] -> Unit) (_: I32) -> fn (_: I32) (resume: fn Unit [Ptr] -> Unit) -> (resume: fn Unit [Ptr] -> Unit) ()
//     in fn () -> ()
// 
// (does_use: fn _ {Use _} -> Unit) (x: _) {(_: Use _)} =
//     (y: _) = (get: fn Unit {Use _} [Ptr Unit] -> _) () {(_: Use _)}
//     (set: fn _ {Use _} [Ptr Unit] -> Unit) ((+: fn _ _ {Add _} -> _) (y: _) (x: _) {(error)}) {(_: Use _)}
// 
// (pure_fn: fn Unit -> Unit) () =
//     (log: fn String {Log} [Ptr Unit] -> Unit) "foo" {(error)}
// 
// (main: fn Unit -> Unit) () =
//     (log: fn String {Log} [Ptr Unit] -> Unit) "foo" {(error)}

// expected stderr:
// examples/typechecking/effects.an:10:34
//  9 | handle_basic () {Log} {Use String} =
// 10 |     handler h for log v -> set v in	// error: Expected an expression but found a newline
//    |                                  ^^
// 11 |     log "test1" {h}
// 
// examples/typechecking/effects.an:11:18
// 10 |     handler h for log v -> set v in
// 11 |     log "test1" {h}	// error: `h` not found in scope
//    |                  ^
// 
// examples/typechecking/effects.an:21:12
// 20 |     y = get ()
// 21 |     set (y + x)	// error: No implicit found for type Add _ required by parameter 3 of +
//    |            ^
// 
// examples/typechecking/effects.an:25:5
// 24 | pure_fn () =
// 25 |     log "foo"	// error: No implicit found for type Log required by parameter 2 of log
//    |     ^^^
// 
// examples/typechecking/effects.an:29:5
// 28 | main () =
// 29 |     log "foo"	// error: No implicit found for type Log required by parameter 2 of log
//    |     ^^^
// 
// Found 5 errors and 0 warnings

